Cambios ticket-chart

--- a/main.html
+++ b/main.html
@@ -158,6 +158,7 @@
                             </div>
                         </div>
                         <div class="graphic-section">
+                            <i class="fa-solid fa-square-caret-down"></i>
                             <canvas id="myChart"></canvas>
                             <div class="filler">
                                 <i class="fa-solid fa-star"></i>
